--- a/src/components/imageSlider.css
+++ b/src/components/imageSlider.css
@@ -4,7 +4,7 @@
   max-width: 800px;
   height: 550px;
   position: relative;
-  overflow: hidden; /* <===  */
+  overflow: hidden;
   border-radius: 15px;
 }
 
