--- a/src/App.css
+++ b/src/App.css
@@ -1,85 +1,87 @@
 @font-face {
-  font-family: 'Canaro';
-  src: url('./assets//fonts/Canaro_Black.ttf') format('truetype');
+  font-family: "Canaro";
+  src: url("./assets//fonts/Canaro_Black.ttf") format("truetype");
   font-weight: 900; /* Black */
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Canaro';
-  src: url('./assets/fonts/Canaro_Book.ttf') format('truetype');
+  font-family: "Canaro";
+  src: url("./assets/fonts/Canaro_Book.ttf") format("truetype");
   font-weight: 100; /* Thin */
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Canaro';
-  src: url('./assets/fonts/Canaro_SemiBold.ttf') format('truetype');
+  font-family: "Canaro";
+  src: url("./assets/fonts/Canaro_SemiBold.ttf") format("truetype");
   font-weight: 400; /* Thin */
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Canaro';
-  src: url('./assets/fonts/Canaro_Bold.ttf') format('truetype');
+  font-family: "Canaro";
+  src: url("./assets/fonts/Canaro_Bold.ttf") format("truetype");
   font-weight: 600; /* Thin */
   font-style: normal;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 
 body {
   font-family: "Open Sans", sans-serif;
 }
 
 .container {
-  @apply m-auto max-w-screen-xl p-4
+  @apply m-auto max-w-screen-xl p-4;
 }
 
-.take-action-page-red{
+.take-action-page-red {
   background: #b71d24;
 }
 
-.take-action-page{
+.take-action-page {
   position: relative;
   height: 100vh;
 }
 
-.mobile-image-inherit{
+.mobile-image-inherit {
   height: 80%;
   position: absolute;
   bottom: 0;
 }
 
-.red-nav-bg{
-  background: #b71d24;
+.red-nav-bg {
+  /* background: #b71d24; */
+  background: white;
   height: 8rem;
 }
 
-.trans-nav-bg-fixed{
+.trans-nav-bg-fixed {
   position: fixed !important;
 }
 
-.no-red-nav-bg{
+.no-red-nav-bg {
   position: fixed !important;
   background: transparent !important;
+  /* background: white; */
 }
 
-.breaking-position{
+.breaking-position {
   position: absolute;
   top: 37%;
   right: 10rem;
 }
 
-.manifesto-bg{
+.manifesto-bg {
   background-color: #000000de;
 }
 
-.page-text-alt{
+.page-text-alt {
   color: #000 !important;
 }
 
-.page-text{
+.page-text {
   font-size: 35px;
   color: #fff;
   font-weight: 600;
@@ -91,7 +93,7 @@ body {
   color: #fff;
 }
 
-.policy-header{
+.policy-header {
   font-size: 6rem;
   color: #fff;
   position: absolute;
@@ -100,7 +102,7 @@ body {
   left: 5rem;
 }
 
-.policy-header-sub{
+.policy-header-sub {
   font-size: 2rem;
   color: #fff;
   position: absolute;
@@ -109,11 +111,11 @@ body {
   left: 16rem;
 }
 
-.manifesto-p-alt{
+.manifesto-p-alt {
   color: #000;
 }
 
-.nav-bg{
+.nav-bg {
   position: fixed;
   background-color: #fff;
   top: 0;
@@ -121,45 +123,46 @@ body {
   width: 100%;
 }
 
-.the-idea-text{
+.the-idea-text {
   color: #fff;
   font-weight: 900;
   font-size: 24px;
 }
 
-.blood-red{
-  background-color: #B92026 !important;
+.blood-red {
+  background-color: #b92026 !important;
 }
 
-.green-color{
+.green-color {
   background-color: #009844 !important;
 }
 
-.white-color{
+.white-color {
   background-color: #fff !important;
   color: #000 !important;
 }
 
-.red-color{
-  color: #EC1C24;
+.red-color {
+  color: #ec1c24;
 }
 
-.black-color{
+.black-color {
   color: black;
-  text-shadow: 2px 0 #fff, -2px 0 #fff, 0 2px #fff, 0 -2px #fff, 1px 1px #fff, -1px -1px #fff, 1px -1px #fff, -1px 1px #fff;
+  text-shadow: 2px 0 #fff, -2px 0 #fff, 0 2px #fff, 0 -2px #fff, 1px 1px #fff,
+    -1px -1px #fff, 1px -1px #fff, -1px 1px #fff;
 }
 
-.gold-color{
-  background-color: #B5A232 !important;
+.gold-color {
+  background-color: #b5a232 !important;
 }
 
-.policy-banner-img{
+.policy-banner-img {
   border-radius: 15px;
   width: 80%;
 }
 
-.active-nav-text{
-  border-bottom: solid 1px black
+.active-nav-text {
+  border-bottom: solid 1px black;
 }
 
 .alt-nav-text {
@@ -171,7 +174,7 @@ body {
 }
 
 .alt-nav-text::after {
-  content: '';
+  content: "";
   position: absolute;
   border-radius: 15px;
   width: 45%;
@@ -182,26 +185,26 @@ body {
   transform-origin: center;
 }
 
-.ug-speech-img{
+.ug-speech-img {
   margin-left: 10rem;
   width: 35rem;
   height: 70vh;
 }
 
-.ug-speech-bg{
+.ug-speech-bg {
   background-color: #ebf8f8;
 }
 
-.breaking-img-width{
+.breaking-img-width {
   width: 40rem;
 }
 
-.text-lg{
+.text-lg {
   font-size: 1rem !important;
   line-height: 1.75rem !important;
 }
 
-.font-normal{
+.font-normal {
   font-weight: 600 !important;
 }
 
@@ -214,7 +217,7 @@ body {
 }
 
 .nav-text::after {
-  content: '';
+  content: "";
   position: absolute;
   border-radius: 15px;
   width: 45%;
@@ -225,66 +228,66 @@ body {
   transform-origin: center;
 }
 
-.take-p{
+.take-p {
   font-weight: 100;
   font-size: 16px;
   text-align: end;
   width: 20rem;
 }
 
-.take-p-color{
+.take-p-color {
   color: #fff;
 }
 
-.take-p-alt{
+.take-p-alt {
   text-align: start !important;
 }
 
-.home-p{
+/* .home-p {
   font-weight: 500;
   font-size: 20px;
-}
+} */
 
-.take-p-footer{
+.take-p-footer {
   color: #b71d24;
   font-size: 14px;
   font-weight: 400;
 }
 
-.take-action-p{
+.take-action-p {
   margin-top: 1rem;
   font-weight: 900;
   font-size: 44px;
   color: #b91f26;
 }
 
-.home-p-alt{
+.home-p-alt {
   font-weight: 400;
   font-size: 24px;
   color: #b91f26;
 }
 
-.header-text-sub-alt{
+.header-text-sub-alt {
   text-align: end !important;
 }
 
-.header-text-sub-alt-2{
+.header-text-sub-alt-2 {
   text-align: start !important;
 }
 
-.header-text-sub-green{
+.header-text-sub-green {
   color: #009844 !important;
 }
 
-.img-opacity{
+.img-opacity {
   opacity: 0.4;
 }
 
-.header-text-sub-alt-size{
+.header-text-sub-alt-size {
   font-size: 2.3rem !important;
 }
 
-.header-text-sub{
+.header-text-sub {
   color: #b91f26;
   font-size: 24px;
   font-weight: 600;
@@ -293,10 +296,10 @@ body {
   line-height: 30px;
 }
 
-.header-text{
+/* .header-text {
   font-size: 2.5rem;
   font-weight: 900;
-}
+} */
 
 .header-text-sub-mobile {
   color: #fff;
@@ -307,19 +310,19 @@ body {
   margin-bottom: 1rem;
 }
 
-.header-text-mobile{
+.header-text-mobile {
   font-size: 25px;
   font-weight: 600;
   margin-bottom: 1rem;
 }
 
-.socials-position{
+.socials-position {
   position: absolute;
   left: 10rem;
   bottom: 2rem;
 }
 
-.icon-color{
+.icon-color {
   color: #fff;
 }
 
@@ -331,43 +334,43 @@ body {
   z-index: 9;
 }
 
-.button-primary-alt{
+.button-primary-alt {
   background-color: #009844 !important;
 }
 
-.bio-header{
+.bio-header {
   font-size: 48px;
   color: #fff;
   font-weight: 600;
 }
 
-.bio-header-sub{
+.bio-header-sub {
   font-size: 32px;
   color: #009844;
   font-weight: 600;
 }
 
-.contact-p-sub{
+.contact-p-sub {
   color: #fff;
 }
 
-.contact-header{
+/* .contact-header {
   font-size: 24px;
   color: #fff;
   font-weight: 400;
   text-transform: uppercase;
-}
+} */
 
-.red-footer-bg{
+.red-footer-bg {
   background: #b71d24;
 }
 
-.red-footer-bg-alt{
+.red-footer-bg-alt {
   height: 2rem;
   background-color: #710b10;
 }
 
-.bio-p{
+.bio-p {
   margin-top: 2rem;
   color: #fff;
   font-size: 18px;
@@ -376,7 +379,7 @@ body {
   font-weight: 100;
 }
 
-.button-primary-text{
+.button-primary-text {
   font-size: 24px !important;
   padding: 15px 35px !important;
 }
@@ -427,11 +430,11 @@ body {
   z-index: 9;
 }
 
-.home-h{
+.home-h {
   height: 100%;
 }
 
-.no-scroll{
+.no-scroll {
   overflow-x: hidden;
 }
 
@@ -442,15 +445,15 @@ body {
   z-index: 1;
 }
 
-.take-action-page-padding-alt{
+.take-action-page-padding-alt {
   padding-left: 2.5rem;
 }
 
-.take-action-page-padding{
+.take-action-page-padding {
   padding-right: 2.5rem;
 }
 
-.vote-for-ug{
+.vote-for-ug {
   position: absolute;
   bottom: 2%;
   right: 20%;
@@ -464,43 +467,44 @@ body {
   left: 350px;
 }
 
-.hero-width{
+.hero-width {
   width: 30%;
 }
 
-.quote-bg{
+.quote-bg {
   width: 100%;
   height: 30rem;
-  background-color: #B92026;
+  background-color: #b92026;
 }
 
-.promise-bg{
+.promise-bg {
   width: 100%;
   height: 100%;
-  background-color: #B92026;
+  background-color: #b92026;
 }
 
-.pledge-bg{
-  padding: 5rem;
+.pledge-bg {
+  /* padding: 5rem; */
   width: 100%;
-  height: 100%;
-  background-image: url('./assets/G1.png');
+  /* height: 100%; */
+  background-image: url("./assets/G1.png");
   background-position: 100% 100%;
   background-size: cover;
   background-repeat: no-repeat;
 }
 
-.vision-bg{
-  padding: 5rem;
+.vision-bg {
+  /* padding: 5rem; */
   width: 100%;
-  height: 100%;
-  background-image: url('./assets/G2.png');
+  /* height: 100%; */
+  background-image: url("./assets/G2.png");
   background-position: 100% 100%;
+  background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
 }
 
-.my-promise-header{
+.my-promise-header {
   margin: 5rem 5rem;
   font-size: 45px;
   color: white;
@@ -508,7 +512,7 @@ body {
   line-height: 10px;
 }
 
-.my-pledge-header{
+.my-pledge-header {
   margin: 3rem 5rem;
   font-size: 45px;
   color: white;
@@ -516,14 +520,14 @@ body {
   line-height: 10px;
 }
 
-.my-quote-header-name{
+.my-quote-header-name {
   color: #fff;
   font-weight: 500;
   font-size: 24px;
   margin-top: 1rem;
 }
 
-.my-quote-header-sub{
+.my-quote-header-sub {
   margin: 0rem 5rem;
   font-size: 30px;
   color: white;
@@ -531,9 +535,7 @@ body {
   line-height: 45px;
 }
 
-
-
-.transition-container {
+.on-cotransitintainer {
   position: relative;
 }
 
@@ -551,7 +553,7 @@ body {
   opacity: 1;
 }
 
-.my-promise-header-sub{
+.my-promise-header-sub {
   margin: 0rem 5rem;
   font-size: 22px;
   color: white;
@@ -560,34 +562,34 @@ body {
   width: 70%;
 }
 
-.my-pledge-header-sub{
-  margin: 5rem 5rem;
-  font-size: 25px;
+.my-pledge-header-sub {
+  /* margin: 5rem 5rem; */
+  /* font-size: 25px; */
   color: white;
   font-weight: 400;
   line-height: 45px;
   width: 70%;
-  height: fit-content;
+  /* height: fit-content; */
 }
 
-.overlay-alt-sub{
+.overlay-alt-sub {
   background: transparent !important;
 }
 
 .overlay-alt {
   border-radius: 15px;
   padding: 0rem;
-  height: 100%;
+  height: max-content;
   z-index: 1;
   width: 50%;
   background: #ffffff42;
-  overflow-y: auto;
+  /* overflow-y: auto; */
 }
 
-.home-banner-alt-n{
+.home-banner-alt-n {
   height: 400px !important;
-  width: -moz-available !important;          /* WebKit-based browsers will ignore this. */
-  width: -webkit-fill-available !important;  /* Mozilla-based browsers will ignore this. */
+  width: -moz-available !important; /* WebKit-based browsers will ignore this. */
+  width: -webkit-fill-available !important; /* Mozilla-based browsers will ignore this. */
   width: fill-available !important;
   background-position: center bottom !important;
 }
@@ -598,7 +600,7 @@ body {
   left: 0;
   width: 100%;
   height: 500px;
-  background-image: url('./assets/backgroud.png');
+  background-image: url("./assets/backgroud.png");
   background-position: 100% 100%;
   background-size: cover;
   background-repeat: no-repeat;
@@ -610,37 +612,37 @@ body {
   right: 0;
 }
 
-.custom-user-height{
+.custom-user-height {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  /* object-fit: cover; */
   z-index: 12;
 }
 
-.hideme{
-  opacity:0;
+.hideme {
+  opacity: 0;
 }
 
 .hideme div {
-  margin:50px; 
-  padding:50px; 
-  background-color:lightgreen; 
+  margin: 50px;
+  padding: 50px;
+  background-color: lightgreen;
 }
 
-.about-body-bg{
+.about-body-bg {
   background: #b91f26;
 }
 
-.alt-body-bg{
+.alt-body-bg {
   background: #fff;
 }
 
-.vote-bg-mobile{
+.vote-bg-mobile {
   top: -50px;
   z-index: 99;
 }
 
-.mobile-card-bg{
+.mobile-card-bg {
   background: #b71d24;
   padding: 2rem 2rem;
   color: #fff;
@@ -649,14 +651,14 @@ body {
   height: 100%;
 }
 
-.mobile-nav-text-normal{
+.mobile-nav-text-normal {
   position: relative;
   color: #000;
   text-align: center;
   margin-bottom: 1rem;
 }
 
-.mobile-nav-text{
+.mobile-nav-text {
   position: relative;
   color: #000;
   text-align: center;
@@ -664,7 +666,7 @@ body {
 }
 
 .mobile-nav-text::after {
-  content: '';
+  content: "";
   position: absolute;
   border-radius: 15px;
   width: 15%;
@@ -693,7 +695,7 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  width:100%;
+  width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.6);
 }
@@ -705,10 +707,10 @@ body {
   height: auto;
   top: 45%;
   left: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
 }
 
-.modal-header{
+.modal-header {
   display: flex;
   align-items: end;
   justify-content: end;
@@ -722,11 +724,13 @@ body {
   display: none;
 }
 
-.content-media-frame{
-  width:100%; height:600px; border:0;
+.content-media-frame {
+  width: 100%;
+  height: 600px;
+  border: 0;
 }
 
-.bio-img-1{
+.bio-img-1 {
   width: 84%;
   height: 100%;
 }
@@ -741,17 +745,17 @@ body {
   z-index: 1;
 }
 
-.manifesto-header{
+.manifesto-header {
   font-weight: 700;
   font-size: 35px;
   margin-top: 1rem;
   color: #b71d24;
   margin-bottom: 1rem;
   line-height: 46px;
-  text-wrap: wrap
+  text-wrap: wrap;
 }
 
-.manifesto-header-small{
+.manifesto-header-small {
   font-size: 25px !important;
 }
 
@@ -759,61 +763,61 @@ body {
   margin-bottom: 0 !important;
 }
 
-.breaking-img-width-alt{
+.breaking-img-width-alt {
   top: 45%;
   width: 35rem;
 }
 
-.support-text{
+.support-text {
   font-weight: 400;
   font-size: 24px;
   /* margin-top: 1rem; */
   /* margin-bottom: 2rem; */
   line-height: 30px;
-  text-wrap: wrap
+  text-wrap: wrap;
 }
 
-.z-action-10{
+.z-action-10 {
   z-index: 100;
 }
 
-.the-flag-margin{
+.the-flag-margin {
   margin: 5% 20%;
 }
 
-.bio-2-height{
+.bio-2-height {
   height: auto;
 }
 
-.take-action-pos{
+.take-action-pos {
   margin: 10rem 0rem;
 }
 
-.button-primary-mobile-d{
+.button-primary-mobile-d {
   padding: 5px 25px !important;
   box-shadow: 0px 13px 20px 0px rgb(15 15 15 / 78%);
 }
 
-.black-box{
+/* .black-box {
   background-color: #000;
   width: 10rem;
   height: 10rem;
   position: absolute;
   top: 5%;
   left: 10%;
-}
+} */
 
-.green-box{
+/* .green-box {
   background-color: #009844;
   width: 15rem;
   height: 15rem;
   position: absolute;
   bottom: 15%;
   left: 8%;
-}
+} */
 
-.red-box{
-  background-color: #EC1C24;
+.red-box {
+  background-color: #ec1c24;
   width: 15rem;
   height: 15rem;
   position: absolute;
@@ -821,8 +825,8 @@ body {
   right: 8%;
 }
 
-.gold-box{
-  background-color: #B5A232;
+.gold-box {
+  background-color: #b5a232;
   width: 20rem;
   height: 20rem;
   position: absolute;
@@ -834,16 +838,16 @@ body {
   padding: 3rem 0rem;
   width: 100%;
   height: 100%;
-  background-image: url('./assets/G4.png');
+  background-image: url("./assets/G4.png");
   background-position: 50% 0%;
   background-size: cover;
   background-repeat: no-repeat;
 }
 .product {
-  background-color:#111111;
-  padding:20px;
-  color:#fff;
-  margin-bottom:20px;
+  background-color: #111111;
+  padding: 20px;
+  color: #fff;
+  margin-bottom: 20px;
   width: 40%;
   /* height:400px; */
 }
@@ -865,7 +869,7 @@ body {
     top: 30%;
     left: 12%;
   }
-  .nav-bg{
+  .nav-bg {
     position: fixed;
     background-color: #fff;
   }
@@ -879,7 +883,7 @@ body {
     line-height: 20px;
   }
   /* Your styles for extra small devices */
-  .the-idea-text{
+  .the-idea-text {
     color: #fff;
     font-weight: 900;
     font-size: 14px;
@@ -907,7 +911,7 @@ body {
   .breaking-img-width {
     width: 13rem;
   }
-  .breaking-position{
+  .breaking-position {
     right: 0;
   }
   .manifesto-p {
@@ -915,7 +919,7 @@ body {
     font-size: 14px;
     color: #fff;
   }
-  .manifesto-p-alt{
+  .manifesto-p-alt {
     color: #000;
   }
 
@@ -954,11 +958,11 @@ body {
     text-wrap: wrap;
   }
 
-  .manifesto-header-sub{
+  .manifesto-header-sub {
     width: 12rem;
     font-size: 25px;
     margin-top: 10px;
-    line-height: 18px
+    line-height: 18px;
   }
 
   .policy-header-sub {
@@ -983,7 +987,7 @@ body {
     z-index: 9;
   }
 
-  .socials-position{
+  .socials-position {
     position: absolute;
     left: 2rem;
     bottom: 1rem;
@@ -993,23 +997,23 @@ body {
     height: 5rem;
   }
 
-  .bio-p{
+  .bio-p {
     padding: 1rem;
     width: 100%;
     margin-top: 0;
   }
 
-  .take-action-p{
+  .take-action-p {
     font-size: 25px;
     line-height: 20px;
     margin-left: 0.5rem;
   }
 
-  .bio-header{
+  .bio-header {
     margin-left: 1rem;
   }
 
-  .bio-header-sub{
+  .bio-header-sub {
     margin-left: 1rem;
     font-size: 24px;
     color: #009844;
@@ -1029,7 +1033,7 @@ body {
 }
 
 /* Small devices (tablets, 576px and up) */
-@media (min-width: 576px) and (max-width: 768px) {
+@media (min-width: 10px) and (max-width: 576px) {
   /* Your styles for small devices */
   .text-position {
     position: absolute;
@@ -1084,7 +1088,7 @@ body {
     left: 25%;
   }
 
-  .hero-width{
+  .hero-width {
     width: 41%;
   }
   .text-position {
@@ -1092,7 +1096,7 @@ body {
     top: 10rem;
     width: 40%;
     left: 2rem;
-    z-index: 9; 
+    z-index: 9;
   }
 
   .home-banner-user {
@@ -1111,9 +1115,9 @@ body {
     bottom: 2rem;
   }
 
-  .bio-img-1{
+  .bio-img-1 {
     width: 100%;
-    height: 85%
+    height: 85%;
   }
 }
 
@@ -1125,7 +1129,7 @@ body {
 /* Extra large devices (extra large desktops, 1200px and up) */
 @media (min-width: 1570px) {
   /* Your styles for extra large devices */
-  
+
   .header-text {
     font-size: 5rem;
     font-weight: 600;
@@ -1164,7 +1168,7 @@ body {
     width: 90%;
     font-weight: 100;
   }
-  
+
   .manifesto-header-small {
     font-size: 40px !important;
   }
@@ -1225,17 +1229,17 @@ body {
   .home-banner {
     height: 700px;
   }
-  .breaking-width{
+  .breaking-width {
     height: 110vh;
     width: 100%;
   }
- 
+
   .breaking-position {
     position: absolute;
     top: 60%;
     left: 50%;
   }
-  .breaking-img-width-alt{
+  .breaking-img-width-alt {
     position: absolute;
     top: 70%;
     width: 45rem;
@@ -1262,7 +1266,7 @@ body {
   }
 }
 
-.portrait-warning{
+.portrait-warning {
   display: none;
 }
 
@@ -1309,22 +1313,22 @@ body {
 .scrollable-div::-webkit-scrollbar {
   width: 10px;
   padding-left: 5rem;
-	background-color: #fff;
+  background-color: #fff;
 }
 
 .scrollable-div::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px #fff ;
-	border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px #fff;
+  border-radius: 10px;
   width: 30rem !important;
-	background-color: #fff  ;
+  background-color: #fff;
   border-left: 3px solid white;
   border-right: 3px solid white;
 }
 
 .scrollable-div::-webkit-scrollbar-thumb {
   border-radius: 20px;
-	-webkit-box-shadow: inset 0 0 px #b71d24 ;
-	background-color: #b71d24;
+  -webkit-box-shadow: inset 0 0 px #b71d24;
+  background-color: #b71d24;
   padding-top: 20px;
 }
 
@@ -1337,7 +1341,7 @@ body {
   width: 12rem !important;
 }
 
-.support-text-alt{
+.support-text-alt {
   color: #fff !important;
 }
 
@@ -1351,7 +1355,7 @@ body {
   border-radius: 5px;
 }
 
-.accordion-body-bg{
+.accordion-body-bg {
   background: #ececec;
   padding: 1rem;
   border-radius: 10px;
