--- a/src/App.css
+++ b/src/App.css
@@ -630,7 +630,7 @@ body {
 }
 
 .about-body-bg {
-  background: #b91f26;
+  background: #f2f2f2;
 }
 
 .alt-body-bg {
@@ -652,14 +652,14 @@ body {
 }
 
 .mobile-nav-text-normal {
-  position: relative;
+  /* position: relative; */
   color: #000;
   text-align: center;
   margin-bottom: 1rem;
 }
 
 .mobile-nav-text {
-  position: relative;
+  /* position: relative; */
   color: #000;
   text-align: center;
   margin-bottom: 1rem;
@@ -673,11 +673,11 @@ body {
   height: 3px;
   bottom: 5px;
   left: 40%;
-  background-color: #b91f26;
+  /* background-color: #b91f26; */
   transform-origin: center;
 }
 
-.mobile-nav-bg {
+/* .mobile-nav-bg {
   padding: 1rem;
   background: #fff;
   border-radius: 15px 15px 15px 15px;
@@ -688,7 +688,7 @@ body {
   color: white;
   z-index: 9;
   box-shadow: 0px 13px 20px 0px rgb(15 15 15 / 78%);
-}
+} */
 
 .modal {
   z-index: 1000;
@@ -731,7 +731,7 @@ body {
 }
 
 .bio-img-1 {
-  width: 84%;
+  width: 85%;
   height: 100%;
 }
 
@@ -1163,7 +1163,8 @@ body {
   .bio-p {
     margin-top: 2rem;
     color: #fff;
-    font-size: 40px;
+
+    font-size: 20px;
     text-align: justify;
     width: 90%;
     font-weight: 100;
