--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family: 'CanaroBook';
+    src: url('/public/fonts/Canaro_Book.ttf') format('ttf');
+    font-weight: normal;
+    font-style: normal;
+  }
