--- a/src/App.css
+++ b/src/App.css
@@ -454,7 +454,7 @@ body {
 .promise-bg {
   width: 100%;
   height: 100%;
-  background-color: #b92026;
+  background-color: #009845;
 }
 
 .pledge-bg {
@@ -464,6 +464,7 @@ body {
   background-image: url("./assets/G1.png");
   background-position: 100% 100%;
   background-size: cover;
+  background-position: top left;
   background-repeat: no-repeat;
 }
 
@@ -473,7 +474,7 @@ body {
   /* height: 100%; */
   background-image: url("./assets/G2.png");
   background-position: 100% 100%;
-  background-position: center;
+  background-position: top left;
   background-size: cover;
   background-repeat: no-repeat;
 }
