--- a/src/App.css
+++ b/src/App.css
@@ -103,6 +103,12 @@ body {
   font-size: 24px;
 }
 
+
+.highlight {
+  transform: scale(1.2);
+  transition: transform 0.3s;
+}
+
 .blood-red {
   background-color: #b92026 !important;
 }
